# agent

./: .env.example  .gitignore  README-phases-1-16.md  README.md  main.py  pyproject.toml  requirements.txt  swarn-architecture.excalidraw  sync-test.txt
agent/: agent_loop.py  cli.py  context_engine.py  dashboard.py  data_pipeline.py  deployment.py  doom_loop.py  evaluation.py  execution.py  feature_engineering.py  finetuning.py  knowledge.py  llm_client.py  mcp_integration.py  mcp_server.py  memory.py  model_training.py  multimodal_rag.py  observability.py  orchestrator.py  prompts.py  roles.py  sandbox.py  self_correction.py  tools.py
agent/llm/: __init__.py  anthropic_client.py  base.py  mock_client.py  openai_client.py  router.py
agent/search/: __init__.py  agent.py  config.py  data_preview.py  journal.py  report.py  runner.py  static_check.py
docs/: Neo-v2 Design Document.docx  Neo-v2 Team Onboarding Deck.pptx  Neo-v3_Design_and_Engineering_Document.docx  Neo-v3_Leadership_Deck.pptx  Swarn_Design_and_Engineering_Document.docx  Swarn_Leadership_Deck.pptx
runs/20260704-183543-320142/: journal.json  report.md
runs/20260704-183543-320142/workspace/: _exec_a8a282cf.py  _exec_ba17c6e5.py
runs/20260704-183543-320142/workspace/input/: train.csv
sandbox/: Dockerfile
tests/: run_tests.py  test_doom_loop.py  test_e2e_search.py  test_execution.py  test_journal.py  test_knowledge.py  test_llm_layer.py  test_parallel_resume.py  test_search_agent.py  test_static_check.py
