[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swarn"
version = "2.0.0"
description = "A from-scratch autonomous AI engineering agent — v2: BYO-LLM, Docker-optional sandbox, AIDE-style solution tree search."
requires-python = ">=3.10"

[project.scripts]
# This is what makes `swarn run "..."` / `swarn serve` work as a bare shell
# command after `pip install -e .` — without this entry point, cli.py's
# commands are only reachable via `python -m agent.cli <command>` (which
# still works fine; this just makes the shorter form in cli.py's own
# docstrings and README.md actually true once installed).
swarn = "agent.cli:main"

[tool.setuptools]
packages = ["agent", "agent.llm", "agent.search"]
